syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/contact/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1298im.mutualmark.C72454mutualmark
//
// MutualMark is the message type for the C72454mutualmark.
message MutualMark {
  // MutualActionDay is the message type for the MutualActionDay.
  message MutualActionDay {
    uint64 type = 1; // uint64_type
    uint64 day  = 2; // uint64_day
    uint64 time = 3; // uint64_time
  }
  // ResourceInfo is the message type for the ResourceInfo.
  message ResourceInfo {
    bytes dynamic_url   = 1; // bytes_dynamic_url
    bytes static_url    = 2; // bytes_static_url
    bytes cartoon_url   = 3; // bytes_cartoon_url
    bytes cartoon_md5   = 4; // bytes_cartoon_md5
    uint32 play_cartoon = 5; // uint32_play_cartoon
    bytes word          = 6; // bytes_word
  }
  // ResourceInfo_17 is the message type for the ResourceInfo_17.
  message ResourceInfo_17 {
    bytes dynamic_url   = 1; // bytes_dynamic_url
    bytes static_url    = 2; // bytes_static_url
    bytes cartoon_url   = 3; // bytes_cartoon_url
    bytes cartoon_md5   = 4; // bytes_cartoon_md5
    uint32 play_cartoon = 5; // uint32_play_cartoon
    bytes word          = 6; // bytes_word
  }
  // SpecialWordAttribute is the message type for the SpecialWordAttribute.
  message SpecialWordAttribute {
    bytes card_id                                             = 1; // bytes_card_id
    bytes card_color                                          = 2; // bytes_card_color
    uint64 set_uin                                            = 3; // uint64_set_uin
    uint64 last_set_time                                      = 4; // uint64_last_set_time
    uint64 last_on_time                                       = 5; // uint64_last_on_time
    uint64 last_off_time                                      = 6; // uint64_last_off_time
    uint64 word_light_up_time                                 = 7; // uint64_word_light_up_time
    SpecialWordCardGetInfo msg_min_special_word_card_get_info = 8; // msg_min_special_word_card_get_info
    SpecialWordCardGetInfo msg_max_special_word_card_get_info = 9; // msg_max_special_word_card_get_info
  }
  // SpecialWordCardGetInfo is the message type for the SpecialWordCardGetInfo.
  message SpecialWordCardGetInfo {
    uint64 uin                 = 1; // uint64_uin
    uint32 can_get_card_count  = 2; // uint32_can_get_card_count
    uint64 last_give_card_time = 3; // uint64_last_give_card_time
  }
  // MutualMark is the message type for the MutualMark.
  message MutualMark {
    uint64 type                                = 1; // uint64_type
    uint64 level                               = 2; // uint64_level
    uint64 src_uin                             = 3; // uint64_src_uin
    uint64 dst_uin                             = 4; // uint64_dst_uin
    float count                                = 5; // float_count
    uint64 day                                 = 6; // uint64_day
    uint64 time                                = 7; // uint64_time
    uint64 icon_status                         = 8; // uint64_icon_status
    uint64 icon_status_end_time                = 9; // uint64_icon_status_end_time
    uint32 close_flag                          = 10; // uint32_close_flag
    bytes resource_info                        = 11; // bytes_resource_info
    bytes cluster                              = 12; // bytes_cluster
    uint64 sub_level                           = 13; // uint64_sub_level
    bytes grade_resource_info                  = 14; // bytes_grade_resource_info
    uint64 modify_time                         = 100; // uint64_modify_time
    bytes min_ver                              = 200; // bytes_min_ver
    bytes max_ver                              = 201; // bytes_max_ver
    repeated MutualActionDay mutual_action_day = 1000; // rpt_mutual_action_day
    float last_week_count                      = 1001; // float_last_week_count
    uint64 add_friend_time                     = 5000; // uint64_add_friend_time
    uint64 add_friend_flag                     = 5001; // uint64_add_friend_flag
    uint64 add_friend_time_update_time         = 5002; // uint64_add_friend_time_update_time
    uint64 degrade_time                        = 6000; // uint64_degrade_time
    uint64 push_time_c2c_50                    = 15000; // uint64_push_time_c2c_50
    uint64 push_time_c2c_100                   = 15001; // uint64_push_time_c2c_100
    uint64 push_time_talk                      = 15002; // uint64_push_time_talk
    uint64 push_time_score_200                 = 16000; // uint64_push_time_score_200
    uint64 push_time_score_400                 = 16001; // uint64_push_time_score_400
    uint64 push_time_score_600                 = 16002; // uint64_push_time_score_600
    uint64 push_time_score_800                 = 16003; // uint64_push_time_score_800
    uint64 push_time_score_1000                = 16004; // uint64_push_time_score_1000
    uint64 push_time_score_1200                = 16005; // uint64_push_time_score_1200
    bytes special_word_attribute               = 17000; // bytes_special_word_attribute
  }
}
