syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/contact/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1298im.oidb.cmd0xd50.Oidb_0xd50
//
// Oidb_0xd50 is the message type for the Oidb_0xd50.
message OIDB0xD50 {
  // ExtSnsFrdData is the message type for the ExtSnsFrdData.
  message ExtSnsFrdData {
    uint64 frd_uin                        = 1; // frd_uin
    bytes lovers                          = 11002; // bytes_lovers
    bytes confidante                      = 21002; // bytes_confidante
    bytes buddy                           = 31002; // bytes_buddy
    bytes frd_tree                        = 41001; // bytes_frd_tree
    bytes chat                            = 51001; // bytes_chat
    bytes praise                          = 61001; // bytes_praise
    bytes qzone_love                      = 71001; // bytes_qzone_love
    bytes qzone_house                     = 81001; // bytes_qzone_house
    bytes music_switch                    = 91001; // bytes_music_switch
    bytes mutualmark_alienation           = 101001; // bytes_mutualmark_alienation
    bytes unread_message                  = 111001; // bytes_unread_message
    bytes boat                            = 121001; // bytes_boat
    bytes close_frd                       = 131001; // bytes_close_frd
    bytes mutualmark_score                = 141001; // bytes_mutualmark_score
    bytes ksing_switch                    = 151001; // bytes_ksing_switch
    bytes lbs_share                       = 181001; // bytes_lbs_share
    bytes dont_forget_me                  = 211001; // bytes_dont_forget_me
    bytes my_online_status_visible_to_frd = 221001; // bytes_my_online_status_visible_to_frd
    bytes frd_online_status_visible_to_me = 221002; // bytes_frd_online_status_visible_to_me
    bytes visitor_record                  = 231001; // bytes_visitor_record
    bytes frd_steal_record                = 231002; // bytes_frd_steal_record
    bytes my_steal_record                 = 231003; // bytes_my_steal_record
    bytes avgame                          = 241001; // bytes_avgame
    bytes aio_quick_app                   = 251001; // bytes_aio_quick_app
  }
  // KSingRelationInfo is the message type for the KSingRelationInfo.
  message KSingRelationInfo {
    uint32 flag = 1; // flag
  }
  // ReqBody is the message type for the ReqBody.
  message ReqBody {
    uint64 appid                               = 1; // appid
    uint32 max_pkg_size                        = 2; // max_pkg_size
    uint32 start_time                          = 3; // start_time
    uint32 start_index                         = 4; // start_index
    uint32 req_num                             = 5; // req_num
    repeated uint64 uin_list                   = 6; // rpt_uin_list
    uint32 req_lovers                          = 11002; // req_lovers
    uint32 req_confidante                      = 21002; // req_confidante
    uint32 req_buddy                           = 31002; // req_buddy
    uint32 req_frd_tree                        = 41001; // req_frd_tree
    uint32 req_chat                            = 51001; // req_chat
    uint32 req_praise                          = 61001; // req_praise
    uint32 req_qzone_love                      = 71001; // req_qzone_love
    uint32 req_qzone_house                     = 81001; // req_qzone_house
    uint32 req_music_switch                    = 91001; // req_music_switch
    uint32 req_mutualmark_alienation           = 101001; // req_mutualmark_alienation
    uint32 req_unread_message                  = 111001; // req_unread_message
    uint32 req_boat                            = 121001; // req_boat
    uint32 req_close_frd                       = 131001; // req_close_frd
    uint32 req_mutualmark_score                = 141001; // req_mutualmark_score
    uint32 req_ksing_switch                    = 151001; // req_ksing_switch
    uint32 req_mutualmark_lbsshare             = 181001; // req_mutualmark_lbsshare
    uint32 req_dont_forget_me                  = 211001; // req_dont_forget_me
    uint32 req_my_online_status_visible_to_frd = 221001; // req_my_online_status_visible_to_frd
    uint32 req_frd_online_status_visible_to_me = 221002; // req_frd_online_status_visible_to_me
    uint32 req_visitor_record                  = 231001; // req_visitor_record
    uint32 req_frd_steal_record                = 231002; // req_frd_steal_record
    uint32 req_my_steal_record                 = 231003; // req_my_steal_record
    uint32 req_avgame                          = 241001; // req_avgame
    uint32 req_aio_quick_app                   = 251001; // req_aio_quick_app
  }
  // RspBody is the message type for the RspBody.
  message RspBody {
    repeated ExtSnsFrdData msg_update_data = 1; // rpt_msg_update_data
    uint32 over                            = 11; // uint32_over
    uint32 next_start                      = 12; // uint32_next_start
    repeated uint64 unfinished_uins        = 13; // rpt_uint64_unfinished_uins
  }
}
