syntax = "proto3";

import "daemon/contact/pb/mutual_mark.proto";

option go_package = "github.com/elap5e/penguin/daemon/contact/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1298im.oidb.cmd0xd6b.Oidb_0xd6b
//
// Oidb_0xd6b is the message type for the Oidb_0xd6b.
message OIDB0xD6B {
  // MutualMarkData is the message type for the MutualMarkData.
  message MutualMarkData {
    uint64 frd_uin                                       = 1; // uint64_frd_uin
    uint32 result                                        = 2; // uint32_result
    uint32 is_gray_for_chat_move                         = 3; // uint32_is_gray_for_chat_move
    repeated MutualMark.MutualMark mutualmark_info = 11; // mutualmark_info
  }
  // ReqBody is the message type for the ReqBody.
  message ReqBody {
    uint32 max_pkg_size      = 1; // max_pkg_size
    uint32 start_time        = 2; // start_time
    repeated uint64 uin_list = 11; // rpt_uin_list
  }
  // RspBody is the message type for the RspBody.
  message RspBody {
    repeated MutualMarkData msg_mutualmark_data = 11; // rpt_msg_mutualmark_data
    repeated uint64 unfinished_uins             = 12; // rpt_uint64_unfinished_uins
  }
}
